--- a/stars/index.html
+++ b/stars/index.html
@@ -14,7 +14,51 @@
   <body class="bg-dark text-light">
 
     <div class="container mt-5">
-        
+        <div class="row">
+            <div class="col-4">
+                <img src="img/poster.webp" />
+            </div>
+            <div class="col-8">
+                <h1>Мстители: Финал</h1>
+                <div class="d-flex align-items-center">
+                    <h3 class="text-success">7.6</h3>
+                    <div class="rating ml-3">
+                        <input class="rating__star" type="radio" name="rating" id="1">
+                        <input class="rating__star" type="radio" name="rating" id="2">
+                        <input class="rating__star" type="radio" name="rating" id="3">
+                        <input class="rating__star" type="radio" name="rating" id="4">
+                        <input class="rating__star" type="radio" name="rating" id="5">
+                        <input class="rating__star" type="radio" name="rating" id="5">
+                    </div>
+                </div>
+                <p>Эпохальное завершение супергеройской франшизы, самый кассовый фильм в истории кино</p>
+                <h5 class="mt-5">О фильме</h5>
+                <table class="table table-dark">
+                    <tbody>
+                      <tr>
+                        <th>Год производства</th>
+                        <td>2019</td>
+                      </tr>
+                      <tr>
+                        <th>Страна</th>
+                        <td>США</td>
+                      </tr>
+                      <tr>
+                        <th>Жанр</th>
+                        <td>фантастика</td>
+                      </tr>
+                      <tr>
+                        <th>Бюджет</th>
+                        <td>$356 000 000</td>
+                      </tr>
+                      <tr>
+                        <th>Возраст</th>
+                        <td>16+</td>
+                      </tr>
+                    </tbody>
+                  </table>
+            </div>
+        </div>
     </div>
   </body>
 </html>
